Fix references modal layout bug

--- a/dev/stylesheets/_references.styl
+++ b/dev/stylesheets/_references.styl
@@ -141,6 +141,8 @@
     
   .reference--description-wrapper
     width 60%
+    @media (min-height em(480))
+      top auto
     
   .reference--description
   .reference--logo
